<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchStocksFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".splashscreen.SplashScreen"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Enter A Ticker Symbol"
            android:id="@+id/tickerSymbolSearchLabel"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="15dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/searchTickerEditText_StockSearch"
            android:textColor="@android:color/black"
            android:hint="Enter a ticker symbol."
            android:singleLine="true"
            android:textSize="30sp"
            android:capitalize="characters" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:id="@+id/stockSearchButton"
            android:onClick="searchTicker"
            android:background="@android:color/holo_green_dark"
            android:textSize="25sp"
            android:layout_gravity="right"
            android:paddingTop="5dp" />

    </LinearLayout>

</RelativeLayout>
