<resources>
    <string name="app_name">StockTracker</string>
    <string name="stock_search_url">https://api.iextrading.com</string>
    <string name="empty_portfolio_message">Your portfolio is empty</string>
    <string name="stock_not_found_message">Stock(s) not found</string>
    <string name="stock_quotes_thread_name">GetStockQuotes</string>
    <string name="stock_quote_list">stock_search_list</string>
    <string name="stock_quote">stock_quote</string>
    <string name="database_error_message">Database Error</string>
    <string name="network_error_message">Network Error</string>
    <string name="portfolio_loading_error_message">Portfolio Loading Error</string>

</resources>
